# shrubbery

./: .gitignore  Cargo.toml  rustfmt.toml  shrubbery.toml  sqlx-data.json
.github/workflows/: rust.yml
axum-easy-multipart/: Cargo.toml
axum-easy-multipart-derive/: Cargo.toml
axum-easy-multipart-derive/src/: attribute.rs  lib.rs
axum-easy-multipart/src/: error.rs  extractor.rs  fields.rs  file.rs  impls.rs  lib.rs  test.rs
migrations/: 0000_initial.down.sql  0000_initial.up.sql
shrubbery/: .gitignore  Cargo.toml  README.md  rustfmt.toml  shell.nix
shrubbery/.github/workflows/: rust.yml
shrubbery/migrations/: 0000_initial.down.sql  0000_initial.up.sql
shrubbery/src/: eval_viewspec.rs  main.rs  server.rs  timestamp.rs
shrubbery/src/config/: mod.rs
shrubbery/src/database/models/: color.rs  file.rs  file_tag.rs  media_type.rs  mod.rs  tag.rs  tag_category.rs  user.rs  user_crypt.rs  user_role.rs
shrubbery/src/error/: mod.rs  template.rs
shrubbery/src/helpers/: auth.rs  cookie.rs  mod.rs  multipart.rs  or_null.rs  pagination.rs  percent.rs  temp_file.rs  viewspec.rs
shrubbery/src/helpers/viewspec/: evaluate.rs  mod.rs
shrubbery/src/routes/: _static.rs  files.rs  login.rs  logout.rs  mod.rs  register.rs  root.rs  upload.rs
shrubbery/src/routes/admin/: mod.rs  sql.rs
shrubbery/src/routes/admin/tag_categories/: edit.rs  mod.rs
shrubbery/src/routes/admin/users/: edit.rs
shrubbery/src/routes/files/: id.rs  mod.rs
shrubbery/src/routes/tags/: delete.rs  edit.rs  mod.rs  shared.rs
shrubbery/src/token/: crypt.rs  mod.rs
shrubbery/src/viewspec/: evaluate.rs  mod.rs  parse.rs
shrubbery/static/res/style/: main.css
shrubbery/templates/: error.html  index.html  login.html  register.html
shrubbery/templates/_partials/: run_sql.html
shrubbery/templates/admin/: index.html
shrubbery/templates/admin/tag_categories/: edit.html
shrubbery/templates/admin/users/: edit.html
shrubbery/templates/files/: page.html  upload.html
shrubbery/templates/tags/: edit.html
src/: main.rs  percent.rs  server.rs  timestamp.rs
src/config/: bindable.rs  mod.rs
src/database/: mod.rs
src/database/models/: color.rs  file.rs  file_tag.rs  media_type.rs  mod.rs  tag.rs  tag_category.rs  user.rs  user_crypt.rs  user_role.rs
src/error/: mod.rs  template.rs
src/helpers/: auth.rs  cookie.rs  just_file.rs  mod.rs  or_null.rs  pagination.rs
src/routes/: _static.rs  error.rs  login.rs  logout.rs  mod.rs  register.rs  root.rs
src/routes/admin/: mod.rs  sql.rs
src/routes/admin/tag_categories/: delete.rs  edit.rs  mod.rs
src/routes/admin/users/: delete.rs  edit.rs  mod.rs
src/routes/tags/: delete.rs  edit.rs  mod.rs  shared.rs
src/token/: crypt.rs  mod.rs
src/viewspec/: evaluate.rs  mod.rs
static-router/: Cargo.toml
static-router/src/: lib.rs  mime.rs
static/res/style/: main.css
templates/: error.html  home.html  index.html  login.html  register.html  welcome.html
templates/admin/: index.html
templates/admin/tag_categories/: edit.html  index.html
templates/admin/users/: edit.html  index.html
templates/layouts/: default.html
templates/partials/: navbar.html  pagination.html  run_sql.html
templates/tags/: edit.html  index.html
viewspec/: Cargo.toml
viewspec/src/: lib.rs  main.rs
viewspec/src/lex/: error.rs  location_tracker.rs  mod.rs  span.rs  test.rs  token.rs
viewspec/src/parse/: ast.rs  error.rs  mod.rs  tag.rs  test.rs
