[package]
name = "shrubbery"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
actix-web = { version = "4", features = [] }
aes-gcm = { version = "0.9", features = ["std"] }
anyhow = "1"
argon2 = { version = "0.4", features = ["password-hash", "std"] }
askama = { version = "0.11", features = ["with-actix-web"] }
askama_actix = "0.13"
askama_escape = "0.10"
base64 = "0.13"
bindable = "^0.1.2"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["env", "toml"] }
futures = "0.3"
log = "0.4"
nom = "7"
percent-encoding = "2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
simple_logger = "2"
smartstring = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs"] }

[dependencies.sqlx]
version = "0.5"
features = ["chrono", "postgres", "runtime-actix-rustls", "macros", "migrate"]

[dependencies.ormx]
git = "https://github.com/mattfbacon/ormx"
rev = "9062fcd8820370c8218de417bd39161d52592d0b"
features = ["postgres"]
