[package]
edition = "2021"
license = "MIT OR Apache"
name = "axum-easy-multipart"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
axum-easy-multipart-derive = { path = "../axum-easy-multipart-derive" }
bytes = "1"
mime = "0.3"
multer = "2"
tempfile = { version = "3", optional = true }
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util"], optional = true }

# dependencies for the extractor implementation specifically
axum-core = "0.2"
futures-core = "0.3"
http = "0.2"
http-body = "0.4"
pin-project-lite = "0.2"

[features]
default = ["file"]
file = ["tempfile", "tokio"]
