[package]
name = "shrubbery"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
# askama
askama = { version = "0.11" }
askama_escape = "0.10"

# async
futures = "0.3"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros"] }
tower = { version = "0.4", default_features = false }

# cryptography
aes-gcm = { version = "0.9", features = ["std"] }
argon2 = { version = "0.4", features = ["password-hash", "std"] }

# data formats, {de,}serialization, {en,de}cryption
base64 = "0.13"
bincode = "1"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }

# logging
tracing = "0.1"
tracing-subscriber = "0.3"

# parsing
nom = "7"

# sql
ormx = { git = "https://github.com/mattfbacon/ormx", rev = "9062fcd8820370c8218de417bd39161d52592d0b", features = [
	"postgres",
] }
sqlx = { version = "0.5", features = [
	"chrono",
	"postgres",
	"runtime-tokio-rustls",
	"macros",
	"migrate",
] }

# web
axum = { version = "0.5", features = [
	"headers",
	"http1",
	"http2",
	"multipart",
	"tower-log",
	"query",
] }
cookie = "0.16"
headers = "0.3"
http = "0.2"
http-body = "0.4"
hyper = "0.14"
tower-http = { version = "0.3", features = ["fs", "trace"] }

# misc
axum-easy-multipart = { path = "../axum-easy-multipart" }
bindable = "^0.1.2"
chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["env", "toml"] }
mime = "0.3"
rand = "0.8"
smartstring = "1"
tempfile = "3"
thiserror = "1"
