[package]
edition = "2021"
license = "AGPL-3.0-or-later"
name = "shrubbery"
version = "0.1.0"

[dependencies]
# askama
askama = { version = "0.11" }
askama_escape = "0.10"

# async
futures = "0.3"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros"] }
tower = { version = "0.4", default_features = false }

# cryptography
aes-gcm = { version = "0.9", features = ["std"] }
argon2 = { version = "0.4", features = ["password-hash", "std"] }

# data formats, {de,}serialization, {en,de}cryption
base64 = "0.13"
bincode = "1"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }

# logging
tracing = "0.1"
tracing-subscriber = "0.3"

# viewspecs
smallvec = "1"
viewspec = { path = "../viewspec" }

# sql
ormx = { git = "https://github.com/mattfbacon/ormx", rev = "ae3e6995a28c0a9da529a67f26bc0ac5425e4f4b", features = [
	"postgres",
] }
sqlx = { version = "0.6", features = ["macros", "migrate", "postgres", "runtime-tokio-rustls", "time"] }

# web
axum = { version = "0.5", features = ["headers", "http1", "http2", "multipart", "query", "tower-log"] }
cookie = "0.16"
headers = "0.3"
http = "0.2"
http-body = "0.4"
hyper = "0.14"
tower-http = { version = "0.3", features = ["fs", "trace"] }

# misc
axum-easy-multipart = { path = "../axum-easy-multipart" }
bindable = "^0.1.2"
figment = { version = "0.10", features = ["env", "toml"] }
mime = "0.3"
rand = "0.8"
static-router = { path = "../static-router" }
tempfile = "3"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
